# slack-new-channel-notification

./: .gitignore  Cargo.toml  Makefile  README.md  template.yml
awsutil/: Cargo.toml
awsutil/src/: lib.rs
slack-to-sns/: Cargo.toml
slack-to-sns/src/: main.rs
slackutil/: Cargo.toml
slackutil/src/: lib.rs
sqs-to-slack/: Cargo.toml
sqs-to-slack/src/: main.rs
src/: main.rs
