[package]
name = "slack-new-channels"
version = "0.1.0"
authors = ["xKerman <xKhorasan@gmail.com>"]
edition = "2018"
autobins = false

[dependencies]
lambda_runtime = "0.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
rusoto_core = "0.36.0"
rusoto_ssm = "0.36.0"
openssl-probe = "0.1.2"
hmac = "^0.7"
sha2 = "^0.8"
crypto-mac = { version = "^0.7", features = ["std"] }
chrono = "^0.4"
hex = "^0.3"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
