[package]
name = "sqs-to-slack"
version = "0.1.0"
authors = ["xKerman <xKhorasan@gmail.com>"]
edition = "2018"
autobins = false

[dependencies]
lambda_runtime = "0.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
openssl-probe = "0.1.2"
chrono = "^0.4"
slack-hook = "0.8"

awsutil = { path = "../awsutil" }

[[bin]]
name = "sqs-to-slack"
path = "src/main.rs"
